<resources>
    <string name="app_name">CoordinApp</string>
    <string name="Test_String">Test_String</string>
    <string name="Interactividad">Interactividad</string>
    <string name="Perfil">Perfil</string>
    <string name="Inicio">Inicio</string>
    <string name="Archivos">Archivos</string>
    <string name="Grupos_Chat">Grupos/Chat</string>
    <string name="no_groups_created">Parece que no tienes ningún grupo creado</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_files">Archivos</string>
    <string name="placeholder_home">Inicio</string>
    <string name="placeholder_interactivity">Interactividad</string>
    <string name="placeholder_profile">Perfil</string>
    <string name="group_name">Nombre del grupo</string>
    <string name="participants">Participantes</string>
    <string name="badges">Insignias</string>
    <string name="desc">Placeholder Image</string>
    <string name="asignaturas">Asignaturas</string>
    <string name="placeholder">Placeholder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_subjects">action_subjects</string>
    <string name="action_settings">action_settings</string>
    <string name="title_activity_main__teacher">MainActivity_Teacher</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="administraci_n">Administración</string>
    <string name="coordinapp">CoordinApp</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="e_mail">E-mail</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="crear_una_cuenta"><u>Crear una cuenta</u></string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="registrase_como_administrador">Registrase como administrador</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesi_n_underline"><u>Iniciar sesión</u></string>
    <string name="registro">Registro</string>
    <string name="rellena_estos_campos_si_eres_alumno">Rellena estos campos si eres alumno</string>
    <string name="nombre_y_apellidos_del_profesor_a">Nombre y apellidos del/la docente</string>
    <string name="curso_en_el_que_se_imparte_la_asignatura">Curso en el que se imparte la asignatura</string>
    <string name="nombre_completo_del_profesor">Nombre completo del/la docente</string>
    <string name="nombre_completo_del_la_profesor_a">Nombre completo del/la docente/a</string>
    <string name="cursos">Cursos</string>
    <string name="fechas">Fechas</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="courses">Courses</string>
    <string name="dates">Dates</string>
    <string name="peticiones_pendientes">Peticiones pendientes</string>
    <string name="name_of_the_student">Name of the student</string>
    <string name="requested_course">Requested course</string>
    <string name="grupos_disponibles">Grupos disponibles</string>
    <string name="grupos">Grupos</string>
    <string name="letra_del_curso">Letra del curso</string>
    <string name="denegar">Denegar</string>
    <string name="name_of_the_course">Name of the course</string>
    <string name="email_of_the_student">Email of the student</string>
    <string name="name_of_the_group">Name of the group</string>
    <string name="expandir">Expandir</string>
    <string name="colapsar">Colapsar</string>
    <string name="mis_grupos">Mis grupos</string>
    <string name="parece_que_no_tienes_ning_n_chat_creado_puedes_crear_un_chat_pulsando_el_bot_n">Parece que no tienes ningún chat creado. Puedes crear un chat pulsando el botón +</string>
    <string name="solicitudes_de_grupo">Solicitudes de grupo</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="selecciona_a_los_participantes">Selecciona a los participantes</string>
    <string name="_1_selecciona_el_curso">1. Selecciona el curso</string>
    <string name="_2_selecciona_la_asignatura">2. Selecciona la asignatura</string>
    <string name="_3_selecciona_a_los_participantes">3. Selecciona_a_los_participantes</string>
    <string name="_3_selecciona_los_participantes">3. Selecciona los participantes</string>
    <string name="name_of_the_requester">Name of the requester</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="name_of_the_course_name_of_the_subject">Name of the course - Name of the subject</string>
    <string name="participant_name">Participant name</string>
    <string name="ver_participantes">Ver participantes</string>
    <string name="pulsa_el_bot_n_para_enviar_una_solicitud_de_creaci_n_de_grupo">Pulsa el botón + para enviar una solicitud de creación de grupo</string>
    <string name="peticiones">Peticiones</string>
    <string name="chats_grupales">Chats grupales</string>
    <string name="chats_con_el_profesor">Chats con el/la docente</string>
    <string name="coursename">CourseName</string>
    <string name="participantes">Participantes</string>
    <string name="subjectname">SubjectName</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="role_of_the_participant">Role of the participant</string>
    <string name="name_of_the_participant">Name of the participant</string>
    <string name="email_of_the_participant">Email of the participant</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="no_tienes_ning_n_grupo_creado_o_no_est_s_en_ning_n_grupo_puedes_crear_un_nuevo_grupo_pulsando_el_bot_n">No tienes ningún grupo creado o no estás en ningún grupo. Puedes crear un nuevo grupo pulsando el botón +</string>
    <string name="profesor_a">Docente</string>
    <string name="individuales">Individuales</string>
    <string name="name_of_the_subject">Name of the subject</string>
    <string name="sender_message">Sender message</string>
    <string name="_3_selecciona_el_modo_de_creaci_n_de_grupos">3. Selecciona el modo de creación de grupos</string>
    <string name="_4_introduce_el_n_mero_de_alumnos_por_grupo">4. Introduce el número de estudiantes por grupo</string>
    <string name="introduce_un_n_mero">Introduce un número</string>
    <string name="name_of_receiver">Name of receiver</string>
    <string name="name_of_the_sender">Name of the sender</string>
    <string name="content_of_the_message">Content of the message</string>
    <string name="test_label">Test label</string>
    <string name="peticion_propia">Petición propia</string>
    <string name="escribe_algo">Escribe algo</string>
    <string name="enviar">Enviar</string>
    <string name="ask_for_card">Ask for card</string>
    <string name="createinputtextcard">CreateInputTextCard</string>
    <string name="createmultichoicecard">CreateMultichoiceCard</string>
    <string name="createremindercard">CreateReminderCard</string>
    <string name="selecciona_el_tipo_de_tarjeta_que_quieres_crear">Selecciona el tipo de tarjeta que quieres crear</string>
    <string name="entrada_de_texto">Entrada de texto</string>
    <string name="multirespuesta">Multirespuesta</string>
    <string name="recordatorio">Recordatorio</string>
    <string name="responder">Responder</string>
    <string name="incluir_a_los_alumnos_restantes">Incluir estudiantes restantes</string>
    <string name="groupname">GroupName</string>
    <string name="estad_sticas">Estadísticas</string>
    <string name="seleccionar_curso_asignatura">Seleccionar curso/asignatura</string>
    <string name="alumnos">Estudiantes</string>
    <string name="selecciona_un_curso_y_una_asignatura_sobre_el_que_mostrar_informaci_n">Selecciona un curso y una asignatura sobre el que mostrar información</string>
    <string name="por_ahora_no_tienes_ninguna_petici_n">Por ahora no tienes ninguna petición</string>
    <string name="selecciona_a_los_participantes_que_quieres_incluir_en_el_grupo">Selecciona a los participantes que quieres incluir en el grupo y al portavoz</string>
    <string name="selecciona_un_curso_y_una_asignatura_sobre_la_que_mostrar_informaci_n">Selecciona un curso y una asignatura sobre la que mostrar información</string>
    <string name="selecciona_un_curso_y_una_asignatura_sobre_la_que_mostrar_informaci_n_para_empezar_a_usar_la_app">Selecciona un curso y una asignatura sobre la que mostrar información para empezar a usar la app</string>
    <string name="a_n_no_tienes_creado_ning_n_grupo_puedes_pulsar_el_bot_n_para_crear_un_grupo">Aún no has creado ningún grupo. Puedes pulsar el botón + para crear uno</string>
    <string name="_1_selecciona_el_modo_de_creaci_n_de_grupos">1. Selecciona el modo de creación de grupos</string>
    <string name="indicar_el_n_mero_de_alumnos_por_grupo">Indicar el número de estudiantes por grupo</string>
    <string name="indicar_el_n_mero_de_grupos">Indicar el número de grupos</string>
    <string name="_2_introduce_el_n_mero_de_alumnos_por_grupo">2. Introduce el número de estudiantes por grupo</string>
    <string name="_2_introduce_el_n_mero_de_grupos">2. Introduce el número de grupos</string>
    <string name="este_texto_depende_de_a_quien_se_le_est_mostrando_el_fragmento">Este texto depende de a quien se le esté mostrando el fragmento</string>
    <string name="no_individual_chats_teacher">Todavía no tienes ningún chat individual. Espera a que un alumno te escriba o crea uno usando el botón +</string>
    <string name="todav_a_no_tienes_ning_n_grupo_individual_creado_puedes_esperar_a_que_un_alumno_te_hable_para_que_aparezca_o_pulsar_el_bot_n_para_crear_uno">Todavía no tienes ningún grupo individual creado. Puedes esperar a que un alumno te hable para que aparezca o pulsar el botón + para crear uno.</string>
    <string name="message_title">Message Title</string>
    <string name="uploader_name">Uploader name</string>
    <string name="uploaded_date">Uploaded date</string>
    <string name="descargar">Descargar</string>
    <string name="file_name">File name</string>
    <string name="noGroupalFiles">Todavía no se ha enviado ningún archivo por los chats grupales. Los archivos aparecerán aquí</string>
    <string name="noIndividualFiles">Todavía no se ha enviado ningún archivo por los chats individuales. Los archivos aparecerán aquí</string>
    <string name="noStatistics">Aún no hay estadísticas de ningún grupo. Puedes empezar a obtener estadísticas creando una nueva actividad con el botón +</string>
    <string name="noGroups">Aún no hay ningún grupo creado. Puedes crear un nuevo grupo para empezar a mandar actividades en la pestaña Grupos</string>
    <string name="_1_selecciona_el_primer_grupo">1. Selecciona el primer grupo</string>
    <string name="_2_selecciona_el_segundo_grupo">2. Selecciona el segundo grupo</string>
    <string name="_3_selecciona_a_los_alumnos_que_quieres_mover_de_grupo">3. Selecciona al número de estudiantes que quieres mover de grupo</string>
    <string name="intercambiar">Intercambiar</string>
    <string name="incluir_a_los_alumnos_restantes_en_un_grupo_de_mayor_tama_o">Incluir estudiantes restantes en un grupo de mayor tamaño</string>
    <string name="_1_selecciona_el_grupo_al_que_deseas_enviar_la_actividad">1. Selecciona el grupo o grupos a los que deseas enviar la actividad</string>
    <string name="_2_agrega_el_t_tulo_de_la_pregunta">2. Agrega el título de la actividad</string>
    <string name="actividad_evaluable">Actividad evaluable</string>
    <string name="actividad_grupal">Actividad grupal</string>
</resources>